# FullBloom

./: .gitignore  CLAUDE.md  GEMINI.md
apps/api/: .env.example  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
apps/api/app/: config.py  main.py  seed.py  seed_admin.py  seed_colors.py
apps/api/app/auth/: dependencies.py  permissions.py  supabase.py
apps/api/app/models/: customer.py  inventory.py  order.py  pricing.py  product.py  standing_order.py  user.py
apps/api/app/routers/: auth.py  availability.py  colors.py  comparison.py  counts.py  customer_counts.py  customers.py  estimates.py  harvest_status.py  health.py  import_data.py  orders.py  price_lists.py  pricing.py  print_sheets.py  product_lines.py  product_types.py  products.py  profile.py  pull_days.py  sales_items.py  sheet_completion.py  sheet_templates.py  standing_orders.py  users.py
apps/api/app/schemas/: color.py  customer.py  import_data.py  inventory.py  order.py  pricing.py  product.py  product_line.py  product_type.py  sales_item.py  standing_order.py  user.py
apps/api/app/services/: customer_service.py  import_service.py  (+5 more)
apps/api/tests/: conftest.py  test_auth.py  test_colors.py  test_counts.py  test_customer_counts.py  test_customer_pricing.py  test_customers.py  test_estimates.py  test_jwt.py  test_orders.py  test_permissions.py  test_price_lists.py  test_product_lines.py  test_product_service.py  test_product_types.py  test_role_access.py  test_sales_items.py  test_sheet_completion.py  test_standing_orders.py  test_users.py  test_varieties.py
(+232 files in other folders)
